--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #DataSource Configuration Properties
-spring.datasource.url=jdbc:mysql://localhost:3306/dbcodetech?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://dbcodetech.cjpylury3ddz.us-east-2.rds.amazonaws.com:3306/dbcodetech?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode
+spring.datasource.username=admin
+spring.datasource.password=admin123
 
 # Hibernate Configuration
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
